--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "NgLootBox",
+  "name": "showcase",
   "version": "1.0.0",
   "scripts": {
-    "Showcase-deploy": "npx angular-cli-ghpages --dir=dist/NgLootBox",
-    "Showcase-deploy-IfUGotError": "ngh --no-silent --dir=dist/NgLootBox"
+    "Showcase-deploy": "npx angular-cli-ghpages --dir=dist/Showcase",
+    "Showcase-deploy-IfUGotError": "ngh --no-silent --dir=dist/Showcase"
   },
   "dependencies": {
   }
